--- a/_config.yml
+++ b/_config.yml
@@ -3,36 +3,30 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Kiko Plus"
-
-
+name:               "The L Show"
 
 author:
-  name:             your-name
-  facebook:         your-id
-  twitter:          your-id
-  github:           your-id
-  linkedin:         your-id
-  medium:           your-id
-  tumblr:           your-id
-  email:            your-id@your-email.com
+  name:             Lawrence Choi
+  github:           github.com/l2choi
+  linkedin:         ttps://www.linkedin.com/in/choilawrence
+  email:            l2choi@uwaterloo.ca
 
-# Google-analytics
+# Google-analytics (not used)
 google-analytics:
   id:               ""
 
-# Disqus
+# Disqus (not used)
 disqus:
-  id:               "your-id"
+  id:               ""
 
 # URL
-url:                "https://AWEEKJ.github.io"
+url:                "https://l2choi.github.io"
 #url:               "localhost:4000"
 baseurl:            ""
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:           Asia/Seoul
+timezone:           Canada/Eastern
 permalink:          /:year-:month-:day/:title/
 
 # Pagination
@@ -53,7 +47,7 @@ nav:
   - name:           "Tags"
     url:            "/tags"
   - name:           "Github"
-    url:            "https://github.com/AWEEKJ/Kiko-plus"
+    url:            "https://github.com/l2choi"
 
 
 
