Fix incorrect Github and Linkedin links

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ name:               "The L Show"
 
 author:
   name:             Lawrence Choi
-  github:           github.com/l2choi
-  linkedin:         ttps://www.linkedin.com/in/choilawrence
+  github:           l2choi
+  linkedin:         choilawrence
   email:            l2choi@uwaterloo.ca
 
 # Google-analytics (not used)
