--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "The L Show"
+name:               "L"
 
 author:
   name:             Lawrence Choi
